# APS_sensor_fault_detection

./: .gitignore  main.py  pyproject.toml
notebooks/: mongodb.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: __init__.py  config.py  exception.py  logger.py  utils.py
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/constant/: database.py
src/constant/training_pipeline/: __init__.py
src/data_access/: sensor_data.py
src/entity/: config_entity.py
src/pipeline/: training_pipeline.py
